<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jo_1.reference_fp.finalproject.DatabaseRetrieveActivity">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/cWeather"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="131dp"
                android:layout_marginTop="106dp"
                android:contentDescription="@string/cWeather" />

            <TextView
                android:id="@+id/cTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/cWeather"
                android:text="@string/cTemp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="23dp"
                android:layout_below="@id/cTemp"
                android:text="@string/minTemp" />

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/minTemp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cTemp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="46dp"
                android:text="@string/maxTemp" />

            <ProgressBar
                android:id="@+id/progressB"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/maxTemp"
                android:layout_marginBottom="27dp"
                android:visibility="invisible"
                android:layout_toEndOf="@+id/minTemp" />
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

